--- a/page-offer.html
+++ b/page-offer.html
@@ -419,16 +419,13 @@
                                             <div class="big-image">
                                                 <div class="big-image-wrapper swiper-wrapper">
                                                     <div class="image-show swiper-slide">
-                                                        <a data-fslightbox href="assets/products/shoe1.jpg"><img src="assets/products/shoe1.jpg" alt=""></a>
+                                                        <a data-fslightbox href="assets/products/apparel4.jpg"><img src="assets/products/apparel4.jpg" alt=""></a>
                                                     </div>
                                                     <div class="image-show swiper-slide">
-                                                        <a data-fslightbox href="assets/products/shoe1-1.jpg"><img src="assets/products/shoe1-1.jpg" alt=""></a>
+                                                        <a data-fslightbox href="assets/products/apparel5.jpg"><img src="assets/products/apparel5.jpg" alt=""></a>
                                                     </div>
                                                     <div class="image-show swiper-slide">
-                                                        <a data-fslightbox href="assets/products/shoe1-2.jpg"><img src="assets/products/shoe1-2.jpg" alt=""></a>
-                                                    </div>
-                                                    <div class="image-show swiper-slide">
-                                                        <a data-fslightbox href="assets/products/shoe1-3.jpg"><img src="assets/products/shoe1-3.jpg" alt=""></a>
+                                                        <a data-fslightbox href="assets/products/apparel6.jpg"><img src="assets/products/apparel6.jpg" alt=""></a>
                                                     </div>
                                                 </div>
                                                 <div class="swiper-button-next"></div>
@@ -438,16 +435,13 @@
                                             <div thumbSlider="" class="small-image">
                                                 <ul class="small-image-wrapper flexitem swiper-wrapper">
                                                     <li class="thumbnail-show swiper-slide">
-                                                        <img src="assets/products/shoe1.jpg" alt="">
+                                                        <img src="assets/products/apparel4.jpg" alt="">
                                                     </li>
                                                     <li class="thumbnail-show swiper-slide">
-                                                        <img src="assets/products/shoe1-1.jpg" alt="">
+                                                        <img src="assets/products/apparel5.jpg" alt="">
                                                     </li>
                                                     <li class="thumbnail-show swiper-slide">
-                                                        <img src="assets/products/shoe1-2.jpg" alt="">
-                                                    </li>
-                                                    <li class="thumbnail-show swiper-slide">
-                                                        <img src="assets/products/shoe1-3.jpg" alt=""> 
+                                                        <img src="assets/products/apparel6.jpg" alt="">
                                                     </li>
                                                 </ul>
                                             </div>
@@ -456,7 +450,7 @@
 
                                     <div class="row">
                                         <div class="item">
-                                            <h1>Men Slip On Shoes Casual with Arch Support Insoles</h1>
+                                            <h1>Happy Sailed Womens Summer Boho Floral</h1>
                                             <div class="content">
                                                 <div class="rating">
                                                     <div class="stars"></div>
@@ -468,10 +462,10 @@
                                                     <span class="sku mini-text">SKU-881</span>
                                                 </div>
                                                 <div class="price">
-                                                    <span class="current">$80.90</span>
-                                                    <span class="normal">$119.90</span>
+                                                    <span class="current">$129.99</span>
+                                                    <span class="normal">$189.99</span>
                                                 </div>
-                                                <div class="colors">
+                                                <!-- <div class="colors">
                                                     <p>Color</p>
                                                     <div class="variant">
                                                         <form action="">
@@ -489,7 +483,27 @@
                                                             </p>
                                                         </form>
                                                     </div>
+                                                </div> -->
+
+                                                <div class="stock mini-text" data-stock="4000">
+                                                    <div class="qty">
+                                                        <span>Sold: <strong class="qty-sold">3459</strong></span>
+                                                        <span>Stock: <strong class="qty-available">107</strong></span>
+                                                    </div>
+                                                    <div class="bar">
+                                                        <div class="available"></div>
+                                                    </div>
                                                 </div>
+                                                <div class="offer">
+                                                    <p>Offer ends at</p>
+                                                    <ul class="flexcenter">
+                                                        <li>1</li>
+                                                        <li>15</li>
+                                                        <li>27</li>
+                                                        <li>07</li>
+                                                    </ul>
+                                                </div>
+
                                                 <div class="sizes">
                                                     <p>Size</p>
                                                     <div class="variant">
