Update: page-category

--- a/page-offer.html
+++ b/page-offer.html
@@ -717,7 +717,7 @@
                 </div>
             </div>
 
-            <div class="features">
+            <div class="related-products">
                 <div class="container">
                     <div class="wrapper">
                         <div class="column">
@@ -745,6 +745,15 @@
                                         <div class="discount circle flexcenter"><span>25%</span></div>
                                     </div>
                                     <div class="content">
+                                        <div class="offer flexitem">
+                                            <p class="mini-text">Offer ends at</p>
+                                            <ul class="flexcenter">
+                                                <li>1</li>
+                                                <li>15</li>
+                                                <li>27</li>
+                                                <li>07</li>
+                                            </ul>
+                                        </div>
                                         <div class="rating">
                                             <div class="stars"></div>
                                             <span class="mini-text">(1,955)</span>
@@ -753,6 +762,16 @@
                                         <div class="price">
                                             <span class="current">$56.50</span>
                                             <span class="normal mini-text">$75.50</span>
+                                        </div>
+                                        <!-- data-stock is product stocks -->
+                                        <div class="stock mini-text" data-stock="4000">
+                                            <div class="qty">
+                                                <span>Sold: <strong class="qty-sold">3459</strong></span>
+                                                <span>Stock: <strong class="qty-available">107</strong></span>
+                                            </div>
+                                            <div class="bar">
+                                                <div class="available"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -773,6 +792,15 @@
                                         <div class="discount circle flexcenter"><span>17%</span></div>
                                     </div>
                                     <div class="content">
+                                        <div class="offer flexitem">
+                                            <p class="mini-text">Offer ends at</p>
+                                            <ul class="flexcenter">
+                                                <li>1</li>
+                                                <li>15</li>
+                                                <li>27</li>
+                                                <li>07</li>
+                                            </ul>
+                                        </div>
                                         <div class="rating">
                                             <div class="stars"></div>
                                             <span class="mini-text">(994)</span>
@@ -782,12 +810,14 @@
                                             <span class="current">$37.50</span>
                                             <span class="normal mini-text">$45.50</span>
                                         </div>
-                                        <div class="footer">
-                                            <ul class="mini-text">
-                                                <li>Polyester, Cotton</li>
-                                                <li>Pull On closure</li>
-                                                <li>Fashion Personality</li>
-                                            </ul>
+                                        <div class="stock mini-text" data-stock="4000">
+                                            <div class="qty">
+                                                <span>Sold: <strong class="qty-sold">1025</strong></span>
+                                                <span>Stock: <strong class="qty-available">2975</strong></span>
+                                            </div>
+                                            <div class="bar">
+                                                <div class="available"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -808,6 +838,15 @@
                                         <div class="discount circle flexcenter"><span>31%</span></div>
                                     </div>
                                     <div class="content">
+                                        <div class="offer flexitem">
+                                            <p class="mini-text">Offer ends at</p>
+                                            <ul class="flexcenter">
+                                                <li>1</li>
+                                                <li>15</li>
+                                                <li>27</li>
+                                                <li>07</li>
+                                            </ul>
+                                        </div>
                                         <div class="rating">
                                             <div class="stars"></div>
                                             <span class="mini-text">(3,459)</span>
@@ -817,12 +856,14 @@
                                             <span class="current">$129.99</span>
                                             <span class="normal mini-text">$189.98</span>
                                         </div>
-                                        <div class="footer">
-                                            <ul class="mini-text">
-                                                <li>65% Polyester, 35% Cotton</li>
-                                                <li>Imported</li>
-                                                <li>Machine Wash</li>
-                                            </ul>
+                                        <div class="stock mini-text" data-stock="4000">
+                                            <div class="qty">
+                                                <span>Sold: <strong class="qty-sold">1416</strong></span>
+                                                <span>Stock: <strong class="qty-available">2585</strong></span>
+                                            </div>
+                                            <div class="bar">
+                                                <div class="available"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -843,6 +884,15 @@
                                         <div class="discount circle flexcenter"><span>35%</span></div>
                                     </div>
                                     <div class="content">
+                                        <div class="offer flexitem">
+                                            <p class="mini-text">Offer ends at</p>
+                                            <ul class="flexcenter">
+                                                <li>1</li>
+                                                <li>15</li>
+                                                <li>27</li>
+                                                <li>07</li>
+                                            </ul>
+                                        </div>
                                         <div class="rating">
                                             <div class="stars"></div>
                                             <span class="mini-text">(10)</span>
@@ -852,12 +902,14 @@
                                             <span class="current">$118.90</span>
                                             <span class="normal mini-text">$189.90</span>
                                         </div>
-                                        <div class="footer">
-                                            <ul class="mini-text">
-                                                <li>Polyester, Cotton</li>
-                                                <li>Pull On closure</li>
-                                                <li>Fashion Personality</li>
-                                            </ul>
+                                        <div class="stock mini-text" data-stock="4000">
+                                            <div class="qty">
+                                                <span>Sold: <strong class="qty-sold">1416</strong></span>
+                                                <span>Stock: <strong class="qty-available">2585</strong></span>
+                                            </div>
+                                            <div class="bar">
+                                                <div class="available"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
