--- a/page-category.html
+++ b/page-category.html
@@ -22,6 +22,7 @@
                 <div class="thetop-nav"></div>
             </div>
         </aside>
+
         <header>
             <div class="header-top mobile-hide">
                 <div class="container">
@@ -60,6 +61,7 @@
                 </div>
             </div>
             <!-- header-top -->
+
             <div class="header-nav">
                 <div class="container">
                     <div class="wrapper flexitem">
@@ -179,18 +181,105 @@
                                         <div class="icon-large"><i class="ri-heart-line"></i></div>
                                         <div class="fly-item"><span class="item-number">0</span></div>
                                     </a></li>
-                                <li><a href="#" class="iscart">
+                                <li class="iscart"><a href="#">
 
                                         <div class="icon-large">
                                             <i class="ri-shopping-cart-line"></i>
-                                            <div class="fly-item"><span class="item-number">0</span></div>
+                                            <div class="fly-item"><span class="item-number">5</span></div>
                                         </div>
 
                                         <div class="icon-text">
                                             <div class="mini-text">Total</div>
-                                            <div class="cart-total">$0.00</div>
+                                            <div class="cart-total">$1,622</div>
                                         </div>
-                                    </a></li>
+                                    </a>
+                                <div class="mini-cart">
+                                    <div class="content">
+                                        <div class="cart-head">
+                                            5 items in cart
+                                        </div>
+                                        <div class="cart-body">
+                                            <ul class="products mini">
+                                                <li class="item">
+                                                    <div class="thumbnail object-cover">
+                                                        <a href="#"><img src="assets/products/home2.jpg" alt=""></a>
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <p><a href="#">Dimmable Ceiling Light Modern</a></p>
+                                                        <span class="price">
+                                                            <span>$279.99</span>
+                                                            <span class="fly-item"><span>2x</span></span>
+                                                        </span>
+                                                    </div>
+                                                    <a href="" class="item-remove"><i class="ri-close-line"></i></a>
+                                                </li>
+                                                <li class="item">
+                                                    <div class="thumbnail object-cover">
+                                                        <a href="#"><img src="assets/products/home3.jpg" alt=""></a>
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <p><a href="#">Modern Storage Cabinet with Door & 3 Drawers</a></p>
+                                                        <span class="price">
+                                                            <span>$129.99</span>
+                                                            <span class="fly-item"><span>2x</span></span>
+                                                        </span>
+                                                    </div>
+                                                    <a href="" class="item-remove"><i class="ri-close-line"></i></a>
+                                                </li>
+                                                <li class="item">
+                                                    <div class="thumbnail object-cover">
+                                                        <a href="#"><img src="assets/products/home4.jpg" alt=""></a>
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <p><a href="#">Vonanda Velvet Sofa Couch</a></p>
+                                                        <span class="price">
+                                                            <span>$352.99</span>
+                                                            <span class="fly-item"><span>2x</span></span>
+                                                        </span>
+                                                    </div>
+                                                    <a href="" class="item-remove"><i class="ri-close-line"></i></a>
+                                                </li>
+                                                <li class="item">
+                                                    <div class="thumbnail object-cover">
+                                                        <a href="#"><img src="assets/products/home5.jpg" alt=""></a>
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <p><a href="#">Awesome Bed for a Couple</a></p>
+                                                        <span class="price">
+                                                            <span>$579.99</span>
+                                                            <span class="fly-item"><span>2x</span></span>
+                                                        </span>
+                                                    </div>
+                                                    <a href="" class="item-remove"><i class="ri-close-line"></i></a>
+                                                </li>
+                                                <li class="item">
+                                                    <div class="thumbnail object-cover">
+                                                        <a href="#"><img src="assets/products/home1.jpg" alt=""></a>
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <p><a href="#">Dimmable Ceiling Light Modern</a></p>
+                                                        <span class="price">
+                                                            <span>$279.99</span>
+                                                            <span class="fly-item"><span>2x</span></span>
+                                                        </span>
+                                                    </div>
+                                                    <a href="" class="item-remove"><i class="ri-close-line"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="cart-footer">
+                                            <div class="subtotal">
+                                                <p>Subtotal</p>
+                                                <p><strong>$1,622.95</strong></p>
+                                            </div>
+                                            <div class="actions">
+                                                <a href="/cart.html" class="primary-button">Checkout</a>
+                                                <a href="/checkout.html" class="secondary-button">View Cart</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -1168,7 +1257,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#0">
+                                <a href="#0" class="cart-trigger">
                                     <i class="ri-shopping-cart-line"></i>
                                     <span>Cart</span>
                                     <div class="fly-item">
