--- a/checkout.html
+++ b/checkout.html
@@ -810,6 +810,33 @@
         </div>
         <!-- search bottom -->
 
+        <div id="modal" class="modal">
+            <div class="content flexcol">
+                <div class="image object-cover">
+                    <img src="assets/products/apparel4.jpg" alt="">
+                </div>
+                <h2>Get the latest deals and coupons</h2>
+                <p class="mobile-hide">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, quam animi aspernatur quasi voluptatibus laudantium.</p>
+                <form action="" class="search">
+                    <span class="icon-large"><i class="ri-mail-line"></i></span>
+                    <input type="mail" placeholder="Your email address">
+                    <button>Subscribe</button>
+                </form>
+                <a href="#" class="mini-text">Do not show me this again</a>
+                <a href="#" class="t-close modalclose flexcenter">
+                    <i class="ri-close-line"></i>
+                </a>
+            </div>
+        </div>
+        <!-- Modal -->
+
+        <div class="backtotop">
+            <a href="#" class="flexcol">
+                <i class="ri-arrow-up-line"></i>
+                <span>Top</span>
+            </a>
+        </div>
+
         <div class="overlay"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
