--- a/checkout.html
+++ b/checkout.html
@@ -490,7 +490,7 @@
                     <div class="wrapper">
                         <div class="checkout flexwrap">
                             <div class="item left styled">
-                                <h1>Shiping Address</h1>
+                                <h1>Shipping Address</h1>
                                 <form action="">
                                     <p>
                                         <label for="email">Email Address <span></span></label>
