--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                                     <div class="item">
                                         <div class="media">
                                             <div class="thumbnail object-cover">
-                                                <a href="#">
+                                                <a href="">
                                                     <img src="assets/products/home2.jpg" alt="">
                                                 </a>
                                             </div>
