--- a/checkout.html
+++ b/checkout.html
@@ -70,7 +70,7 @@
                             <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
-                                    <li><a href="#">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="#">Shop</a></li>
                                     <li class="has-child">
                                         <a href="#">Women
