--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                     <div class="item">
                                         <div class="offer">
                                             <p>Offer ends at</p>
-                                            <ul class="flexcenter">
+                                            <ul class="flexcenter" id="demo">
                                                 <li id="days"></li>
                                                 <li id="hours"></li>
                                                 <li id="minutes"></li>
